Style: Ensure text-inputs stay visible in inputs

--- a/client/src/pages/table-view/TableView.css
+++ b/client/src/pages/table-view/TableView.css
@@ -49,14 +49,28 @@
   height: 45px;
   background-color: white;
 }
-.TableView table td input[type=text] {
+.TableView table td div.input-container {
+  position: relative;
   box-sizing: border-box;
+  border: 1px solid black;
+  height: 100%;
+}
+.TableView table td div.input-container input[type=text] {
+  padding: 0;
+  border: none;
   height: 100%;
   text-align: center;
   font-size: inherit;
   font-family: inherit;
   width: 100%;
   overflow: auto;
+}
+.TableView table td div.input-container span.input-width-indicator {
+  visibility: hidden;
+  color: rgb(88, 146, 0);
+  left: 0;
+  position: absolute;
+  white-space: pre;
 }
 .TableView table td.edit-button-cell {
   background-color: transparent;
